--- a/index.html
+++ b/index.html
@@ -1310,9 +1310,9 @@
     <nav class="navbar fixed-top" id="mainNav" >
         <div class="container">
           
-          <a class="navbar-brand" id="title" style=" position: absolute; margin-left: -2em; 
-            margin-top: -0.2em;" href="welcome.php" ><i class="bi bi-house-fill"></i> CTU Danao Parking System</a><br>
-            <div class="navbar-menu">   
+          <a class="navbar-brand" id="title" style=" position: absolute; margin-left: 2em; 
+            margin-top: -0.2em;" href="welcome.php" ><i class="bi bi-house-fill"></i> CTU Danao Parking System</a>
+            <div class="navbar-menu" style="margin-top: 2em;">   
                 <a class="navbar-item" href="admin/index.php">Admin</a>
                 <a class="navbar-item" href="guard/index.php">Security</a>
                 <a class="navbar-item" href="index.html">About</a>
