--- a/index.html
+++ b/index.html
@@ -1311,7 +1311,7 @@
         <div class="container">
           
           <a class="navbar-brand" id="title" style=" position: absolute; margin-left: 2em; 
-            margin-top: -0.2em;" href="welcome.php" ><i class="bi bi-house-fill"></i> CTU Danao Parking System</a>
+            margin-top: -0.2em;" href="welcome.php" ><i class="bi bi-house-fill"></i> CTU Danao Parking System</a><br>
             <div class="navbar-menu" style="margin-top: 2em;">   
                 <a class="navbar-item" href="admin/index.php">Admin</a>
                 <a class="navbar-item" href="guard/index.php">Security</a>
