--- a/index.html
+++ b/index.html
@@ -1323,8 +1323,9 @@
 
     @media (max-width: 768px) {
       .navbar-menu {
-        flex-direction: column;
-        align-items: center;
+        flex-direction: row;
+        justify-content: center;
+        flex-wrap: nowrap;
       }
     }
 
