--- a/index.html
+++ b/index.html
@@ -1167,6 +1167,7 @@
 
 @media (max-width: 480px) { /* Mobile screens */
     .navbar {
+      flex-direction: row;
         padding: 5px 0; /* Further adjust padding for mobile */
     }
 
