--- a/index.html
+++ b/index.html
@@ -1167,7 +1167,6 @@
 
 @media (max-width: 480px) { /* Mobile screens */
     .navbar {
-      flex-direction: row;
         padding: 5px 0; /* Further adjust padding for mobile */
     }
 
@@ -1392,16 +1391,18 @@
     
     <body id="page-top">
         <!-- Navigation-->
-        <nav class="navbar fixed-top" id="mainNav">
-          <a class="navbar-brand" id="title" href="welcome.php">
-            <i class="bi bi-house-fill"></i> CTU Danao Parking System
-          </a>
-          <div class="navbar-menu">
-            <a class="navbar-item" href="admin/index.php">Admin</a>
-            <a class="navbar-item" href="guard/index.php">Security</a>
-            <a class="navbar-item" href="index.html">About</a>
-          </div>
-        </nav>
+    <nav class="navbar fixed-top" id="mainNav" >
+        <div class="container">
+          
+          <a class="navbar-brand" id="title" style=" position: absolute; margin-left: -2em; 
+            margin-top: -0.2em;" href="welcome.php" ><i class="bi bi-house-fill"></i> CTU Danao Parking System</a><br>
+            <div class="navbar-menu">   
+                <a class="navbar-item" href="admin/index.php">Admin</a>
+                <a class="navbar-item" href="guard/index.php">Security</a>
+                <a class="navbar-item" href="index.html">About</a>
+            </div>
+        </div>
+    </nav>
 
         <!-- Masthead-->
         <header class="masthead bg-primary text-white text-center">
