--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
         
-    <!-- jQuery, Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"></script>
+            <!-- jQuery, Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"></script>
     
 
 
@@ -63,9 +63,9 @@
             }
 }
 
-            h5{
-              color: orange;
-            }
+     h5{
+         color: orange;
+        }
     .headingText {
       color: #e74c3c;
       font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -1756,7 +1756,7 @@
     <!-- Copyright Section-->
     <div class="copyright py-3 text-center" style="background-color: #2a5298; color: white;">
       <div class="container">
-          <marquee direction="left"> <small>🚈 Copyright &copy; CTU Parking System 2023</small></marquee>
+          <marquee direction="left"> <small>Copyright &copy; CTU Parking System 2023</small></marquee>
       </div>
     </div>
 
@@ -1765,10 +1765,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <!-- * *                               SB Forms JS                               * *-->
-        <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
         <script>
             // Function to show the logout alert
