--- a/index.html
+++ b/index.html
@@ -1728,7 +1728,7 @@
               <!-- Footer Location-->
               <div class="col-lg-4 mb-5">
                   <h5 class="text-uppercase mb-4" style="color: #ff9933;">Location</h5>
-                  <p class="lead mb-0">
+                  <p class="lead mb-0" style="color: white;">
                       Cebu Technological University - Danao Campus<br />
                       Sabang, Danao
                   </p>
@@ -1744,7 +1744,7 @@
               <!-- Footer About Text-->
               <div class="col-lg-4">
                   <h5 class="text-uppercase mb-4" style="color: #ff9933;">Explore Now!</h5>
-                  <p class="lead mb-0">
+                  <p class="lead mb-0" style="color: white;">
                       Ready to use the system? Click the link below to explore:<br />
                       <a href="index.php" class="text-decoration-none" style="color: orange;"><i class="bi bi-house-door-fill"></i> CTU Parking System</a>
                   </p>
