--- a/index.html
+++ b/index.html
@@ -1431,7 +1431,7 @@
                     <button class="explore" id="view-more-button" style="color: white; font-weight: bold; text-decoration: none;">View More</button>
                   </div>
                       <div class="videoContainer" style=" margin-top: 100px;">
-                        <iframe allowfullscreen="allowfullscreen" class="mainVideo" controls="controls" src="https://www.youtube.com/watch?v=ZwVIXjfDCrk">
+                        <iframe allowfullscreen="allowfullscreen" class="mainVideo" controls="controls" src="https://youtu.be/ZwVIXjfDCrk">
                         </iframe>
                         <img class="dotsImg image-block" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/cw3.svg">
                       </div>
