--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>CTU Parking System</title>
-        <link rel="apple-touch-icon" href="images/ctul.png">
-        <link rel="shortcut icon" href="images/ctul.png">
+        <link rel="apple-touch-icon" href="../images/aa.png">
+        <link rel="shortcut icon" href="../images/aa.png">
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -1431,7 +1431,7 @@
                     <button class="explore" id="view-more-button" style="color: white; font-weight: bold; text-decoration: none;">View More</button>
                   </div>
                       <div class="videoContainer" style=" margin-top: 100px;">
-                        <iframe allowfullscreen="allowfullscreen" class="mainVideo" controls="controls" src="https://www.youtube.com/embed/ZwVIXjfDCrk" title="CTU DANAO PARKING SYSTEM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>">
+                        <iframe allowfullscreen="allowfullscreen" class="mainVideo" controls="controls" src="https://www.youtube.com/embed/ZwVIXjfDCrk" title="CTU DANAO PARKING SYSTEM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         </iframe>
                         <img class="dotsImg image-block" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/cw3.svg">
                       </div>
